--- a/experiments-local/mixed/mobilenetv2/64_fusion.yaml
+++ b/experiments-local/mixed/mobilenetv2/64_fusion.yaml
@@ -1,14 +1,14 @@
-GPUS: '0'
-BACKBONE_MODEL: pose_resnet
-MODEL: multiview_pose_resnet
+GPUS: '0,1'
+BACKBONE_MODEL: pose_mobilenetv2
+MODEL: multiview_pose_mobilenetv2
 DATA_DIR: ''
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 4
-PRINT_FREQ: 100
+WORKERS: 8
+PRINT_FREQ: 100 
 
 DATASET:
-  TRAIN_DATASET: mixed
+  TRAIN_DATASET: multiview_h36m
   TEST_DATASET: multiview_h36m
   ROOT: 'data/'
   TRAIN_SUBSET: train
@@ -16,17 +16,18 @@ DATASET:
   DATA_FORMAT: 'nozip'
   ROT_FACTOR: 0
   SCALE_FACTOR: 0
+  CAMNUM: 11
 NETWORK:
-  PRETRAINED: 'models/pytorch/imagenet/resnet50-19c8e357.pth'
+  PRETRAINED: 'models/pytorch/imagenet/mobilenet_v2.pth.tar'
   TARGET_TYPE: gaussian
   AGGRE: true
   HEATMAP_SIZE:
-  - 64
-  - 64
+  - 32
+  - 16
   IMAGE_SIZE:
-  - 256
-  - 256
-  NUM_JOINTS: 20
+  - 128
+  - 64
+  NUM_JOINTS: 1
   SIGMA: 2
 POSE_RESNET:
   FINAL_CONV_KERNEL: 1
@@ -44,24 +45,25 @@ POSE_RESNET:
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
-  BATCH_SIZE: 1
+  BATCH_SIZE: 32
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 30
-  RESUME: true
+  END_EPOCH: 70
+  RESUME: false
   OPTIMIZER: adam
-  LR: 0.001
+  LR: 0.01
   LR_FACTOR: 0.1
   LR_STEP:
-  - 20
-  - 25
+  - 10
+  - 40
+  - 60
   WD: 0.0001
   GAMMA1: 0.99
   GAMMA2: 0.0
   MOMENTUM: 0.9
   NESTEROV: false
 TEST:
-  BATCH_SIZE: 4
+  BATCH_SIZE: 16
   BBOX_FILE: ''
   BBOX_THRE: 1.0
   DETECTOR: fpn_dcn
@@ -75,10 +77,11 @@ TEST:
   POST_PROCESS: false
   USE_GT_BBOX: true
 PICT_STRUCT:
+  FIRST_NBINS: 16
   PAIRWISE_FILE: 'data/pict/pairwise.pkl'
 DEBUG:
   DEBUG: true
   SAVE_BATCH_IMAGES_GT: true
   SAVE_BATCH_IMAGES_PRED: true
-  SAVE_HEATMAPS_GT: true
-  SAVE_HEATMAPS_PRED: true
+  SAVE_HEATMAPS_GT: false
+  SAVE_HEATMAPS_PRED: false
