--- a/experiments-local/mixed/mobilenetv2/64_fusion.yaml
+++ b/experiments-local/mixed/mobilenetv2/64_fusion.yaml
@@ -1,10 +1,10 @@
-GPUS: '0,1'
+GPUS: '0'
 BACKBONE_MODEL: pose_mobilenetv2
 MODEL: multiview_pose_mobilenetv2
 DATA_DIR: ''
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 8
+WORKERS: 0
 PRINT_FREQ: 100 
 
 DATASET:
@@ -23,10 +23,10 @@ NETWORK:
   AGGRE: true
   HEATMAP_SIZE:
   - 32
-  - 16
+  - 32
   IMAGE_SIZE:
   - 128
-  - 64
+  - 128
   NUM_JOINTS: 1
   SIGMA: 2
 POSE_RESNET:
@@ -45,7 +45,7 @@ POSE_RESNET:
 LOSS:
   USE_TARGET_WEIGHT: true
 TRAIN:
-  BATCH_SIZE: 32
+  BATCH_SIZE: 16
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 70
@@ -83,5 +83,5 @@ DEBUG:
   DEBUG: true
   SAVE_BATCH_IMAGES_GT: true
   SAVE_BATCH_IMAGES_PRED: true
-  SAVE_HEATMAPS_GT: false
-  SAVE_HEATMAPS_PRED: false
+  SAVE_HEATMAPS_GT: true
+  SAVE_HEATMAPS_PRED: true
